z-index Mobile menu fixed

--- a/styles/main.css
+++ b/styles/main.css
@@ -160,6 +160,7 @@ img {
   position: absolute;
   top: 0;
   left: 0;
+  z-index: 6;
 }
 
 .list {
@@ -172,7 +173,7 @@ img {
   transition: all 1s ease-in-out;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 5;
 }
 
 .list.menu-active {
@@ -506,7 +507,7 @@ img {
   border-radius: 50px;
   background-color: rgba(255, 255, 255, 0.425);
   transition: all 0.3s;
-  z-index: 1;
+  z-index: 6;
 }
 
 .arrow-up-active {
